added nuget pack packages

--- a/src/MediatR.CQRS.Ninject/MediatR.CQRS.Ninject.csproj
+++ b/src/MediatR.CQRS.Ninject/MediatR.CQRS.Ninject.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+  <PackageReference Include="NuGet.Build.Tasks.Pack" Version="5.2.0"/>
     <PackageReference Include="mediatr.cqrs" Version="1.0.0" />
     <PackageReference Include="ninject.extensions.conventions" Version="3.3.0" />
     <PackageReference Include="MediatR" Version="7.0.0" />
